2003-10-24  Radek Doulik  <rodo@ximian.com>

	* README: updated reired packages versions

2003-09-30  Radek Doulik  <rodo@ximian.com>

	* configure.in: increased GTKHTML_CURRENT and also gtkhtml version
	as gtk_html_stop was added and there is a binary incompatible
	change as well

2003-09-22  Radek Doulik  <rodo@ximian.com>

	* configure.in: increase GTKHTML_CURRENT again, as we don't
	install a11y lib anymore, we link it to libgtkhtml

2003-09-19  Radek Doulik  <rodo@ximian.com>

	* configure.in: incremented GTKHTML_CURRENT as GtkHTML struct
	changed

2003-09-17  Dan Winship  <danw@ximian.com>

	* configure.in: Check for libsoup-2.2 first, and then soup-2.0 if
	that's not found. Define HAVE_OLD_SOUP if we find 2.0

2003-09-04  Larry Ewing  <lewing@ximian.com>

	* Makefile.am: change CLEANFILES to DISTCLEANFILES to fix Ximian
	#43015.

2003-08-13  Mike Kestner  <mkestner@ximian.com>

	* configure.in : update for gal-2.2

2003-08-12  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Fixed GETTEXT_PACKAGE (ximian #37784), and make sure
	that newest intltool is used.

2003-07-25  Larry Ewing  <lewing@ximian.com>

	* configure.in: bump interface version from 3.0 to 3.1 clear .so
	version

2003-06-26  Larry Ewing  <lewing@ximian.com>

	* configure.in: bump versions for release.

2003-05-27  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-05-22  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-21  Larry Ewing  <lewing@ximian.com>

	* configure.in: bump versions for release.

2003-04-29  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (CLEANFILES): add new CLEANFILES to pass distcheck
	with automake-1.7.3, this is probably something that should be
	fixed in intltool.

2003-04-09  Radek Doulik  <rodo@ximian.com>

	* configure.in: use gal for library as well (we use
	e_iconv_locale_language now)

2003-04-04  Larry Ewing  <lewing@ximian.com>
