@@ -5,11 +5,33 @@ SUBDIRS =					\
 	art					\
 	po
 
-DISTCLEANFILES =					\
-	po/.intltool-merge-cache		\
+CLEANFILES =					\
+	po/.intltool-merge-cache
+
+DISTCLEANFILES =				\
 	intltool-extract			\
 	intltool-update				\
 	intltool-merge
+
+MAINTAINERCLEANFILES =				\
+	Makefile.in				\
+	aclocal.m4				\
+	config.guess				\
+	config.h.in				\
+	config.sub				\
+	configure				\
+	depcomp					\
+	install-sh				\
+	intltool-extract.in			\
+	intltool-merge.in			\
+	intltool-update.in			\
+	libtool					\
+	ltmain.sh				\
+	missing					\
+	mkinstalldirs				\
+	po/Makefile.in.in			\
+	po/$(GETTEXT_PACKAGE).pot		\
+	stamp.h.in
 
 EXTRA_DIST =					\
 	gtkhtml.spec.in				\
@@ -19,3 +41,4 @@ EXTRA_DIST =					\
 	intltool-extract.in			\
 	intltool-update.in			\
 	intltool-merge.in
+
