@@ -1,3 +1,12 @@
+2003-12-02  Rodney Dawes  <dobey@ximian.com>
+
+	* Makefile.am: Create CLEANFILES rules that clean the right things
+	at the right clean stages
+	* install-sh:
+	* missing:
+	* mkinstalldirs:
+	* stamp.h.in: These four files don't belong in CVS
+
 2003-10-24  Radek Doulik  <rodo@ximian.com>
 
 	* README: updated reired packages versions
